--- a/environment.yml
+++ b/environment.yml
@@ -1,38 +1,84 @@
-name: D:\6_pyProjects\portfolio\venv
+name: null
 channels:
   - defaults
 dependencies:
   - ca-certificates=2020.1.1=0
-  - certifi=2019.11.28=py37_0
+  - certifi=2020.4.5.1=py37_0
   - click=7.0=py37_0
   - flask=1.1.1=py_0
   - flask-sqlalchemy=2.4.1=py_0
+  - freetype=2.9.1=ha9979f8_1
   - itsdangerous=1.1.0=py37_0
   - jinja2=2.11.1=py_0
+  - jpeg=9b=hb83a4c4_2
+  - libpng=1.6.37=h2a8f88b_0
+  - libtiff=4.1.0=h56a325e_0
   - markupsafe=1.1.1=py37he774522_0
-  - marshmallow=3.2.2=py_0
-  - marshmallow-sqlalchemy=0.19.0=py_0
-  - openssl=1.1.1d=he774522_4
+  - olefile=0.46=py37_0
+  - openssl=1.1.1f=he774522_0
+  - pillow=7.0.0=py37hcc1f983_0
   - pip=20.0.2=py37_1
   - python=3.7.6=h60c2a47_2
-  - setuptools=45.2.0=py37_0
+  - setuptools=46.0.0=py37_0
   - sqlalchemy=1.3.13=py37he774522_0
   - sqlite=3.31.1=he774522_0
+  - tk=8.6.8=hfa6e2cd_0
   - vc=14.1=h0510ff6_4
   - vs2015_runtime=14.16.27012=hf0eaf9b_1
   - werkzeug=1.0.0=py_0
   - wheel=0.34.2=py37_0
   - wincertstore=0.2=py37_0
+  - xz=5.2.4=h2fa13f4_4
+  - zlib=1.2.11=h62dcd97_3
+  - zstd=1.3.7=h508b16e_0
   - pip:
     - aniso8601==8.0.0
+    - atomicwrites==1.3.0
+    - babel==2.8.0
+    - beautifulsoup4==4.8.2
+    - blinker==1.4
+    - bs4==0.0.1
+    - chardet==3.0.4
     - dependency-injector==3.15.6
+    - flask-admin==1.5.5
+    - flask-babelex==0.9.4
+    - flask-buzz==0.1.14
+    - flask-limiter==1.2.1
+    - flask-login==0.5.0
+    - flask-mail==0.9.1
+    - flask-marshmallow==0.11.0
+    - flask-praetorian==1.0.0
+    - flask-principal==0.4.0
     - flask-restplus==0.13.0
+    - flask-security==3.0.0
+    - flask-wtf==0.14.3
+    - idna==2.9
     - importlib-metadata==1.5.0
     - jsonschema==3.2.0
+    - limits==1.5.1
+    - marshmallow==3.5.1
+    - marshmallow-sqlalchemy==0.22.3
+    - more-itertools==8.2.0
+    - packaging==20.3
+    - passlib==1.7.2
+    - pendulum==2.1.0
+    - pluggy==0.13.1
+    - py==1.8.1
+    - py-buzz==0.3.7
+    - pyjwt==1.7.1
+    - pyparsing==2.4.6
     - pyrsistent==0.15.7
+    - pytest==5.4.1
+    - python-dateutil==2.8.1
+    - python-dotenv==0.12.0
     - pytz==2019.3
+    - pytzdata==2019.3
+    - requests==2.23.0
     - six==1.14.0
-    - webargs==6.0.0
+    - soupsieve==2.0
+    - speaklater==1.3
+    - urllib3==1.25.8
+    - wcwidth==0.1.8
+    - webargs==5.4.0
+    - wtforms==2.2.1
     - zipp==3.1.0
-prefix: D:\6_pyProjects\portfolio\venv
-
